--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Vacaciones/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Vacaciones/Nuevo.cshtml
@@ -84,7 +84,7 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="IdVacacion">Periodo de vacaciones*</label>
-                    @Html.Action("cmb_vacaciones", Model)
+                    @Html.Action("cmb_vacaciones", Model.IdVacacion)
                     @Html.ValidationMessageFor(q => q.IdVacacion, "", new { @class = "text-danger" })
 
 
