--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Vacaciones/_cmb_vacaciones.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Vacaciones/_cmb_vacaciones.cshtml
@@ -16,7 +16,7 @@
         settings.Properties.Columns.Add("FechaFin", "Fecha hasta").Width = System.Web.UI.WebControls.Unit.Percentage(20);
         settings.Properties.Columns.Add("DiasGanado", "Días ganado").Width = System.Web.UI.WebControls.Unit.Percentage(20);
         settings.Properties.Columns.Add("DiasTomados", "Días gozado").Width = System.Web.UI.WebControls.Unit.Percentage(20);
-        settings.Properties.TextFormatString = "[{0}] {1}";
+        settings.Properties.TextFormatString = "[{0}] [{1}] [{2}] [{3}]";
         settings.Properties.ValueField = "IdVacacion";
         settings.Properties.ValueType = typeof(int);
 
