--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoRubroAcumulado/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoRubroAcumulado/Anular.cshtml
@@ -20,13 +20,12 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="IdProveedor">Empleado</label>
-                    @Html.Partial("_EmpleadoRubroAcumulado", Model.IdEmpleado)
+                    @Html.Partial("_CmbEmpleado_rubros_acumulados", Model.IdEmpleado)
                     @Html.ValidationMessageFor(q => q.IdEmpleado, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
     </div>
-
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
@@ -89,3 +88,22 @@
     }
 }
 
+<script>
+
+    $(function () {
+
+        $('#fechai').datepicker({
+            autoclose: true
+        })
+    })
+
+    $(function () {
+
+        $('#fechaf').datepicker({
+            autoclose: true
+        })
+    })
+
+
+
+</script>
