--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoRubroAcumulado/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoRubroAcumulado/Nuevo.cshtml
@@ -17,7 +17,7 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="IdProveedor">Empleado</label>
-                    @Html.Partial("_EmpleadoRubroAcumulado", Model.IdEmpleado)
+                    @Html.Partial("_CmbEmpleado_rubros_acumulados", Model.IdEmpleado)
                     @Html.ValidationMessageFor(q => q.IdEmpleado, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -75,7 +75,9 @@
                 @Html.ValidationMessageFor(q => q.Fec_Fin_Acumulacion, "", new { @class = "text-danger" })
             </div>
         </div>
+
     </div>
+
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
         <a class="btn btn-default" href="@Url.Action("Index","EmpleadoRubroAcumulado",new { Area = "RRHH" },null)">Cancelar</a>
