--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoRubroAcumulado/_GridViewPartial_rubros_acumulados.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoRubroAcumulado/_GridViewPartial_rubros_acumulados.cshtml
@@ -74,8 +74,23 @@
         settings.Columns.Add("pe_cedulaRuc","Cédula").Width = Unit.Percentage(10);
         settings.Columns.Add("pe_nombreCompleto","Nombres").Width = Unit.Percentage(30);
         settings.Columns.Add("ru_descripcion","Rubro").Width = Unit.Percentage(20);
-        settings.Columns.Add("Fec_Inicio_Acumulacion","Fecha solicitud").Width = Unit.Percentage(13);
-        settings.Columns.Add("Fec_Fin_Acumulacion","Fin solicitud").Width = Unit.Percentage(13);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "Fec_Inicio_Acumulacion";
+            column.Caption = "Fecha solicitud";
+            column.Width = Unit.Percentage(13);
+            column.PropertiesEdit.DisplayFormatString = "d";
+
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "Fec_Fin_Acumulacion";
+            column.Caption = "Fin solicitud";
+            column.Width = Unit.Percentage(13);
+            column.PropertiesEdit.DisplayFormatString = "d";
+
+        });
+
 
     });
 }
