--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/_CmbCliente_Cobranza.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/_CmbCliente_Cobranza.cshtml
@@ -18,9 +18,10 @@
         settings.Properties.Columns.Add("pe_cedulaRuc", "RUC", 20);
         settings.Properties.Columns.Add("pe_nombreCompleto", "Cliente", 70);
         settings.Properties.ClientSideEvents.SelectedIndexChanged = "VaciarLista";
+        settings.Properties.FilterMinLength = 3;
     })
     .BindList(new Core.Erp.Web.Areas.CuentasPorCobrar.Controllers.CobranzaController().get_list_bajo_demanda, new Core.Erp.Web.Areas.CuentasPorCobrar.Controllers.CobranzaController().get_info_bajo_demanda)
-    .Bind(Model.IdEntidad);
+    .Bind(Model.GetType() == typeof(Core.Erp.Info.CuentasPorCobrar.cxc_cobro_Info) ? "" : (Model == 0 ? "" : Model));
 
 }
 @comboBox.GetHtml()
